apps/tandoor/manifests/common/ingress-nginx.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/proxy-body-size: 50M
  labels:
    app.kubernetes.io/name: tandoor
    app.kubernetes.io/part-of: tandoor
    app.kubernetes.io/version: 1.4.12
  name: tandoor-nginx
  namespace: tandoor
spec:
  ingressClassName: nginx
  rules:
  - host: recipes.krupa.net.pl
    http:
      paths:
      - backend:
          service:
            name: tandoor
            port:
              name: gunicorn
        path: /
        pathType: Prefix
      - backend:
          service:
            name: tandoor-static
            port:
              name: http
        path: /media
        pathType: Prefix
      - backend:
          service:
            name: tandoor-static
            port:
              name: http
        path: /static
        pathType: Prefix
  tls:
  - hosts:
    - recipes.krupa.net.pl
    secretName: tandoor-tls
