apps/tandoor/manifests/common/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    gethomepage.dev/description: Our recipes
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Ankh Cloud
    gethomepage.dev/icon: https://github.com/vabene1111/recipes/raw/develop/docs/logo_color.svg
    gethomepage.dev/name: Cookbook
    nginx.ingress.kubernetes.io/proxy-body-size: 50M
  labels:
    probe: enabled
  name: recipes
  namespace: tandoor
spec:
  ingressClassName: nginx
  rules:
  - host: recipes.krupa.net.pl
    http:
      paths:
      - backend:
          service:
            name: recipes
            port:
              name: gunicorn
        path: /
        pathType: Prefix
      - backend:
          service:
            name: static
            port:
              name: http
        path: /media
        pathType: Prefix
      - backend:
          service:
            name: static
            port:
              name: http
        path: /static
        pathType: Prefix
  tls:
  - hosts:
    - recipes.krupa.net.pl
    secretName: recipes-tls
